// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Help /> commands renders commands (stripped) 1`] = `
"

 COMMANDS 

  foo <src> [dst]  This is a normal command with params.
  barbar           This is a deprecated command with no params. [deprecated]
"
`;

exports[`<Help /> commands renders commands 1`] = `
"

[30m[47m COMMANDS [49m[39m

  foo [90m<src>[39m [90m[dst][39m  This is a normal command with params.
  barbar           This is a deprecated command with no params. [90m[deprecated][39m
"
`;

exports[`<Help /> config renders description 1`] = `
"
I am a command that does cool things.
"
`;

exports[`<Help /> config renders description with additional params 1`] = `
"
I am a command that does cool things. [90m[deprecated][39m
"
`;

exports[`<Help /> config renders description with markdown 1`] = `
"
This is the top level command description.
All descriptions support markdown like [1mbold[22m, [1mstrong[22m, [3mitalics[23m, [3memphasis[23m, and [9mstrikethroughs[29m.
"
`;

exports[`<Help /> options renders options (stripped) 1`] = `
"

 OPTIONS 

      --str string                            Standard string option.
      --deprecatedStringWithALongName string  Deprecated string option with custom label.
                                              [deprecated]
      --flag                                  Standard boolean option.
  -s, --stringChoices string                  Choice list with strings. (choices: \\"foo\\", \\"bar\\"
                                              (default), \\"baz\\")
  -n, --numberFixedList number                A list of numbers to choose from. (choices: 1, 2, 3,
                                               4, 5, 6, 7, 8, 9, 10) [deprecated]
  -C, --numberCountable number                Number option that increments a count for each
                                              occurence. (default: 10) [counter]
      --deprecatedFlag                        A deprecated flag. [deprecated]
      --numWithArity number[]                 A multiple number option that requires an exact
                                              number of values. [multiple(10)]
  -S, --strList string[]                      String option list. [multiple]
  -t, --no-truthyBool                         Flag that is on by default, so name should be
                                              negated. (default: true)
      --num number                            Standard number option.
"
`;

exports[`<Help /> options renders options 1`] = `
"

[30m[47m OPTIONS [49m[39m

      --str [90mstring[39m                            Standard string option.
      --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with custom label.
                                              [90m[deprecated][39m
      --flag                                  Standard boolean option.
  -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices: \\"foo\\", \\"bar\\"
                                              (default), \\"baz\\")
  -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from. (choices: 1, 2, 3,
                                               4, 5, 6, 7, 8, 9, 10) [90m[deprecated][39m
  -C, --numberCountable [90mnumber[39m                Number option that increments a count for each
                                              occurence. (default: 10) [90m[counter][39m
      --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
      --numWithArity [90mnumber[][39m                 A multiple number option that requires an exact
                                              number of values. [90m[multiple(10)][39m
  -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
  -t, --no-truthyBool                         Flag that is on by default, so name should be
                                              negated. (default: true)
      --num [90mnumber[39m                            Standard number option.
"
`;

exports[`<Help /> params renders params (stripped) 1`] = `
"

 PARAMS 

     0 string    Complex param with many tags. [deprecated, required]
  path string    This is a string param thats required. (default: \\"value\\") [required]
    ms number    And this a number param with a label. (default: 300)
     3 boolean   And finally a boolean param. (default: true) [deprecated]
"
`;

exports[`<Help /> params renders params 1`] = `
"

[30m[47m PARAMS [49m[39m

     0 [90mstring[39m    Complex param with many tags. [90m[deprecated, required][39m
  path [90mstring[39m    This is a string param thats required. (default: \\"value\\") [90m[required][39m
    ms [90mnumber[39m    And this a number param with a label. (default: 300)
     3 [90mboolean[39m   And finally a boolean param. (default: true) [90m[deprecated][39m
"
`;

exports[`<Help /> renders everything 1`] = `
"
I am a command that does cool things.

[30m[47m USAGE [49m[39m

  $ ink foo bar

[30m[47m PARAMS [49m[39m

     0 [90mstring[39m    Complex param with many tags. [90m[deprecated, required][39m
  path [90mstring[39m    This is a string param thats required. (default: \\"value\\") [90m[required][39m
    ms [90mnumber[39m    And this a number param with a label. (default: 300)
     3 [90mboolean[39m   And finally a boolean param. (default: true) [90m[deprecated][39m

[30m[47m COMMANDS [49m[39m

  foo [90m<src>[39m [90m[dst][39m  This is a normal command with params.
  barbar           This is a deprecated command with no params. [90m[deprecated][39m

[30m[47m OPTIONS [49m[39m

      --str [90mstring[39m                            Standard string option.
      --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with custom label.
                                              [90m[deprecated][39m
      --flag                                  Standard boolean option.
  -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices: \\"foo\\", \\"bar\\"
                                              (default), \\"baz\\")
  -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from. (choices: 1, 2, 3,
                                               4, 5, 6, 7, 8, 9, 10) [90m[deprecated][39m
  -C, --numberCountable [90mnumber[39m                Number option that increments a count for each
                                              occurence. (default: 10) [90m[counter][39m
      --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
      --numWithArity [90mnumber[][39m                 A multiple number option that requires an exact
                                              number of values. [90m[multiple(10)][39m
  -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
  -t, --no-truthyBool                         Flag that is on by default, so name should be
                                              negated. (default: true)
      --num [90mnumber[39m                            Standard number option.
"
`;

exports[`<Help /> usage renders usage array 1`] = `
"

[30m[47m USAGE [49m[39m

  $ ink foo bar
  $ test --foo -b
"
`;

exports[`<Help /> usage renders usage string 1`] = `
"

[30m[47m USAGE [49m[39m

  $ ink foo bar
"
`;
